src/css/home.css
/* ... */
.section__p{
    /* --section-color: var(--not-quite-dark); */
    margin-top: 24px;
    font-size: clamp(16px,2vw,20px);
    line-height: 1.625;
    font-weight: inherit;
    font-style: inherit;
    font-family: inherit;
    vertical-align: baseline;
    color: var(--section-color);
    text-rendering: optimizeLegibility;
    text-align: justify;
}

/* Footer */

footer{
    height: 300px;
    background: var(--background-color);
    padding: 75px 60px;
}

.footer__container{
    height: 200px;
    /* border: 3px solid red; */
}

.footer__left-container{
    height: 100%;
    width: 30%;
    /* border: 2px solid green; */
    float: left;
}

.footer__h2{
    color: var(--white);
    font-size: 40px;
    font-weight: 700;
}

.footer__h3{
    color: var(--white);
    font-size: 25px;
    font-weight: 500;
    margin-top: 10px;
}

.icons__container{
    margin-top: 25px;
}

.social-icons{
    color: var(--white);
    margin-right: 40px;
    font-size: 25px;
}

.footer__right-container{
    height: 100%;
    float: right;
    /* border: 2px solid white; */
    width: 65%;
}

.footer__info{
    float: left;
    /* border: 3px solid red; */
    width: 195px;
    height: 100%;
}

.footer__span{
    color: var(--white);
    font-size: 18px;
    line-height: 24px;
    font-weight: 700;
}

.footer__a{
    color: var(--white);
    font-size: 16px;
    margin-top: 8px;
    display: block;
    text-decoration: none;
    
}

.footer__a:hover{
    color: var(--white);
    font-size: 16px;
    margin-top: 8px;
    display: block;
    text-decoration: underline;
}

.white-line{
    color: var(--white);
    
}

#pri{
    height: 4px;
    width: 20px;
    
}

.cards{
    display: grid;
    grid-template-columns: repeat(auto-fit,
    minmax(200px,1fr));
    gap: 20px;
}

/*  Responsive Design */

@media(max-width:520px){
    .nav-bar__logo__container{
        transform: translateX(-45px);
    }
    .navbar__text{
        color: var(--not-quite-dark);
        padding: 5px 12px;
        font-size: 16px;
        line-height: 24px;
        font-weight: 100;
        
    }
    .navbar__login__btn{
        transform: translateX(30%);
        width: 60%;
        background-color: var(--bluish-purple);
        color: var(--white);
    }
    .navbar__login__btn:hover{
        color: var(--white);
    }

    .home__container, #homepage{
        height: 720px;
        width: 100%;
        padding: 1px;
        margin-top: 30px;
    }

    .home__container__message{
        width: 100%;
        margin-left: -2em;
    }
    .home__main-message{
        /* font-size: clamp(24px,5vw,34px); */
        font-size: 35px;
        width: 100%;
        transform: translateX(8%);
    }
    .home__message{
        text-align: justify;
        padding-left: 50px;
        font-size: clamp(16px,2vw,20px);
        transform: translateY(-20%);
    }
    .home__message__btn{
        transform: translate(14%,-15%);
        width: 90%;
        height: 100%;
        /* border: 5px solid black; */
    }
    .home__btn{
        display: block;
    }
    .btn__browser{
        margin-top: 20px;
        margin-right: 20px;
    }
    /* .btn__download{
        margin-top: 1rem;
        transform: translate(-50%,10%);
    } */
    .image__left__container{
        width: 70%;
        height: 40%;
        transform: translate(35%, 130%);
    }
    /* .image__right__container{
        width: 50%;
        height: 60%;
        
    } */
    .image__right__container{
        transform: translate(100%,130%);
    }
    .image__right__div{
        width: 200px;
    }
    .hidden{
        display: none;
    }
    .section-area{
        height: 765px;
        padding: 56px 24px;
    }
    .section__left-container{
        float: none;
        width: 100%;
        max-width: 678px;
        max-height: 440px;
    }
    .section__img__container{
        width: 100%;
        height: 80%;
        max-width: 678px;
        max-height: 440px;
    }
    .section__img{
        max-width: 678px;
        max-height: 440px;
        grid-column: span var(--num-grid-columns);
        width: 100%;
        height: 100%;
    }
    .section__right-container{
        float: none;
    }
}

